# fadds-parser

./: .gitignore  LICENSE  README.md  dev_requirements.txt  setup.cfg  setup.py
fadds/: awos.py  base_file.py  twr.py
tests/: test_awos.py  test_twr.py
tests/data/: AWOS.txt  TWR.txt
