[metadata]
name = fadds-parser
summary = Parses the individual files available here: https://nfdc.faa.gov/fadds/home.do
author = Stephane Poss, Andrew Fink
author-email = stephane.poss@airnavigation.aero
description-file = README.md
license = MIT
classifier =
	Intended Audience :: Developers
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	License :: OSI Approved :: MIT
keywords = fadds

[files]
packages =
	fadds
